--- a/AllTrailsLunch/ViewControllers/RestaurantListCollectionViewController/Base.lproj/RestaurantListCollectionViewController.storyboard
+++ b/AllTrailsLunch/ViewControllers/RestaurantListCollectionViewController/Base.lproj/RestaurantListCollectionViewController.storyboard
@@ -3,30 +3,14 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AllTrailsLunch" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="88" y="60"/>
-        </scene>
         <!--Restaurant List Collection View Controller-->
         <scene sceneID="GJ0-oC-UQG">
             <objects>
-                <collectionViewController id="97f-lh-PVg" customClass="RestaurantListCollectionViewController" customModule="AllTrailsLunch" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="RestaurantListCollectionViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="97f-lh-PVg" customClass="RestaurantListCollectionViewController" customModule="AllTrailsLunch" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" id="WjY-Je-ZNR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -35,7 +19,7 @@
                             <size key="itemSize" width="327" height="96"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                            <inset key="sectionInset" minX="10" minY="20" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells/>
                         <connections>
@@ -43,16 +27,14 @@
                             <outlet property="delegate" destination="97f-lh-PVg" id="1Ze-QU-dtR"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="Ize-L9-hmM"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k2i-QW-mZS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-428" y="-613"/>
+            <point key="canvasLocation" x="481.15942028985512" y="-613.39285714285711"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGroupedBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
