--- a/AllTrailsLunch/ViewControllers/ParentContainerViewController.storyboard
+++ b/AllTrailsLunch/ViewControllers/ParentContainerViewController.storyboard
@@ -17,25 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0L3-2k-HJW">
-                                <rect key="frame" x="0.0" y="144" width="414" height="752"/>
-                                <connections>
-                                    <segue destination="zC8-lN-Won" kind="embed" id="reS-Bn-4DO"/>
-                                </connections>
-                            </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" role="primary" translatesAutoresizingMaskIntoConstraints="NO" id="hwg-cn-nRW">
-                                <rect key="frame" x="157" y="800" width="100" height="42"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="Wwu-3l-Bhn"/>
-                                    <constraint firstAttribute="height" constant="42" id="bdt-xN-TAR"/>
-                                </constraints>
-                                <color key="tintColor" name="primaryAction"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" image="mapPin" title="Map">
-                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
-                                    <color key="baseBackgroundColor" name="primaryAction"/>
-                                </buttonConfiguration>
-                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2vi-h4-gDd">
                                 <rect key="frame" x="0.0" y="44" width="414" height="100"/>
                                 <subviews>
@@ -77,41 +58,49 @@
                                     <constraint firstAttribute="height" constant="100" id="p8h-rf-iV1"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" role="primary" translatesAutoresizingMaskIntoConstraints="NO" id="hwg-cn-nRW">
+                                <rect key="frame" x="157" y="800" width="100" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Wwu-3l-Bhn"/>
+                                    <constraint firstAttribute="height" constant="42" id="bdt-xN-TAR"/>
+                                </constraints>
+                                <color key="tintColor" name="primaryAction"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" image="mapPin" title="Map">
+                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
+                                    <color key="baseBackgroundColor" name="primaryAction"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="didTapPrimaryButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="a9s-L3-ziz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0L3-2k-HJW" secondAttribute="trailing" id="4Mj-Wd-5eS"/>
-                            <constraint firstItem="0L3-2k-HJW" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="MJV-y3-qXb"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="hwg-cn-nRW" secondAttribute="bottom" constant="20" id="Sui-ZQ-3Pw"/>
                             <constraint firstItem="hwg-cn-nRW" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="V6o-Z0-kTl"/>
                             <constraint firstItem="2vi-h4-gDd" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Xkr-GK-5vr"/>
-                            <constraint firstAttribute="bottom" secondItem="0L3-2k-HJW" secondAttribute="bottom" id="dQ6-up-yhf"/>
-                            <constraint firstItem="0L3-2k-HJW" firstAttribute="top" secondItem="2vi-h4-gDd" secondAttribute="bottom" id="kk1-1j-KMJ"/>
                             <constraint firstItem="2vi-h4-gDd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="nIz-Eg-wAx"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2vi-h4-gDd" secondAttribute="trailing" id="rwf-EC-gWU"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5z1-Sn-d7g"/>
+                    <connections>
+                        <outlet property="headerNavView" destination="2vi-h4-gDd" id="lbu-Pk-Ydm"/>
+                        <outlet property="viewTypeButton" destination="hwg-cn-nRW" id="846-e9-Ijq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="984.05797101449286" y="78.348214285714278"/>
-        </scene>
-        <!--RestaurantListCollectionViewController-->
-        <scene sceneID="SSh-ME-Ih1">
-            <objects>
-                <viewControllerPlaceholder storyboardName="RestaurantListCollectionViewController" referencedIdentifier="RestaurantListCollectionViewController" id="zC8-lN-Won" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QqB-1p-sEX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1684" y="78"/>
         </scene>
     </scenes>
     <resources>
         <image name="allTrailsIconMountain" width="39" height="30"/>
         <image name="mapPin" width="28" height="34"/>
         <namedColor name="primaryAction">
-            <color red="0.25882352941176467" green="0.54117647058823526" blue="0.074509803921568626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.25900000333786011" green="0.54100000858306885" blue="0.075000002980232239" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
